# estad

./: README.md  ai_helper.py  app.py  create_examples.py  data_processor.py  pyproject.toml  replit.md  stats_utils.py  test_calculations.py  test_qualitative_fallback.py  visualization.py
ejemplos_datos/: alturas.xlsx  calificaciones.csv  colores_favoritos.csv  edades_estudiantes.csv  ingresos.xlsx  nivel_satisfaccion.csv
